--- a/index.html
+++ b/index.html
@@ -3,30 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title> &ndash; GamepadsOut</title>
-  <link rel="stylesheet" href="style.css">
-  
-  <script async defer type="application/ecmascript"></script>
-	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="gamepad-shim">
-		<param name="src" value="untitled.swf">
-		<!--[if !IE]>-->
-		<object type="application/x-shockwave-flash" data="untitled.swf">
-		<!--<![endif]-->
-			
-		<!--[if !IE]>-->
-		</object>
-		<!--<![endif]-->
-	</object>
+  <script type="application/ecmascript" src="source/js/require.js" data-main="source/js/main.js"></script>
 </head>
 <body>
-	<header>
-    <!-- insert header content here -->
-  </header>
-  
-  <!-- this container will be popluated by Ajax -->
-  <div id="container"></div>
-  
-  <footer>
-    <!-- insert footer content here -->
-  </footer>
+	<p>Hellow world!</p>
 </body>
 </html>
