Fix self-referential typo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <script type="application/ecmascript" src="source/js/require.js" data-main="source/js/main.js"></script>
 </head>
 <body>
-	<p>Hellow world!</p>
+	<p>Hello world!</p>
 </body>
 </html>
