I think I just went full retard

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<title> &ndash; GamepadsOut</title>
 	<script>
 	(function (a) {
-		a = document.createElement('a');
+		a = document.createElement('script');
 		a.src = 'source/js/require.js?_=' + Date.now();
-		a.setAttribute('data-main', 'source/js/main.js';
+		a.setAttribute('data-main', 'source/js/main.js');
 		document.head.appendChild(a);
 	})();
+	</script>
 </head>
 <body>
 	<p>Hello world!</p>
