--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
 	<title>&nbsp;</title>
 </head>
 <body>
-    <script>
-	document.write('Gamepad' in window);
+  <script>
+	document.body.innerHTML = 'Gamepad' in window;
 	</script>
 </body>
 </html>
