--- a/site/index.html
+++ b/site/index.html
@@ -106,9 +106,9 @@
 		<!-- Three columns of text below the carousel -->
 		<div class="row">
 			<div class="col-md-4 text-center">
-				<img class="img-circle" src="http://placehold.it/140x140">
-				<h2>Mobile-first</h2>
-				<p>Tablets, phones, laptops. The new 3 promises to be mobile friendly from the start.</p>
+				<img class="img-circle" src="img/keyboard.jpg" width="140" height="140">
+				<h2>The end of keyboard/mouse games.</h2>
+				<p>Ever smashed your keyboard apart when you lost because you didn't have that control? That comes to an end, today.</p>
 				<p><a class="btn btn-default" href="#">View details »</a></p>
 			</div>
 			<div class="col-md-4 text-center">
@@ -131,7 +131,7 @@
 		<hr class="featurette-divider">
 
 		<div class="featurette">
-			<img class="featurette-image img-circle pull-right" src="img/iesucks.png">
+			<img class="featurette-image img-circle pull-right" src="img/iesucks.png" width="512" height="512">
 			<h2 class="featurette-heading">More browsers. <span class="text-muted">No more worrying about IE.</span></h2>
 			<p class="lead">Ever had concerns about compatibility for different APIs on different browsers? Chuck your fears away with the HTML5 Gamepad Shim.</p>
 		</div>
