--- a/site/index.html
+++ b/site/index.html
@@ -109,19 +109,13 @@
 				<img class="img-circle" src="img/keyboard.jpg" width="140" height="140">
 				<h2>The end of keyboard/mouse games.</h2>
 				<p>Ever smashed your keyboard apart when you lost because you didn't have that control? That comes to an end, today.</p>
-				<p><a class="btn btn-default" href="#">View details »</a></p>
+				<p><a class="btn btn-default" href="download.html">Donwload »</a></p>
 			</div>
 			<div class="col-md-4 text-center">
 				<img class="img-circle" src="http://placehold.it/140x140">
-				<h2>One Fluid Grid</h2>
-				<p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
-				<p><a class="btn btn-default" href="#">View details »</a></p>
-			</div>
-			<div class="col-md-4 text-center">
-				<img class="img-circle" src="http://placehold.it/140x140">
-				<h2>LESS is More</h2>
-				<p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
-				<p><a class="btn btn-default" href="#">View details »</a></p>
+				<h2>How does it work?</h2>
+				<p>Messy vendor prefixes and random support on each computer doesn't need to exist! Take a look at how the Gamepad Shim works.</p>
+				<p><a class="btn btn-default" href="about.html">View details »</a></p>
 			</div>
 		</div><!-- /.row -->
 
@@ -131,7 +125,7 @@
 		<hr class="featurette-divider">
 
 		<div class="featurette">
-			<img class="featurette-image img-circle pull-right" src="img/iesucks.png" width="512" height="512">
+			<img class="featurette-image img-circle pull-right" src="img/iesucks.png" width="400" height="400">
 			<h2 class="featurette-heading">More browsers. <span class="text-muted">No more worrying about IE.</span></h2>
 			<p class="lead">Ever had concerns about compatibility for different APIs on different browsers? Chuck your fears away with the HTML5 Gamepad Shim.</p>
 		</div>
