--- a/site/index.html
+++ b/site/index.html
@@ -112,7 +112,7 @@
 				<p><a class="btn btn-default" href="download.html">Donwload »</a></p>
 			</div>
 			<div class="col-md-4 text-center">
-				<img class="img-circle" src="http://placehold.it/140x140">
+				<img class="img-circle" src="img/wheel.jpg" width="140" height="140">
 				<h2>How does it work?</h2>
 				<p>Messy vendor prefixes and random support on each computer doesn't need to exist! Take a look at how the Gamepad Shim works.</p>
 				<p><a class="btn btn-default" href="about.html">View details »</a></p>
