--- a/site/about.html
+++ b/site/about.html
@@ -27,8 +27,8 @@
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="about.html" target="ext">About</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="#">About</a></li>
 							<li><a href="download.html">Download</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorial <b class="caret"></b></a>
