--- a/site/download.html
+++ b/site/download.html
@@ -27,9 +27,9 @@
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="about.html" target="ext">About</a></li>
-							<li><a href="download.html">Download</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li class="active"><a href="#">Download</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorial <b class="caret"></b></a>
 								<ul class="dropdown-menu">
@@ -44,6 +44,10 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /navbar wrapper -->
+	
+	<br>
+	<br>
+	<br><br><br><br><br><br><br><br><br>
 	
    <div class="container marketing">
     <div class="row">
