--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Home</a></li>
-							<li><a href="about.html" target="ext">About</a></li>
+							<li><a href="about.html">About</a></li>
 							<li><a href="download.html">Download</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorial <b class="caret"></b></a>
