--- a/site/download.html
+++ b/site/download.html
@@ -45,9 +45,7 @@
 		</div><!-- /container -->
 	</div><!-- /navbar wrapper -->
 	
-	<br>
-	<br>
-	<br><br><br><br><br><br><br><br><br>
+	<div style="width:100%; height:400px;"></div>
 	
    <div class="container marketing">
     <div class="row">
