--- a/site/about.html
+++ b/site/about.html
@@ -33,9 +33,9 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorial <b class="caret"></b></a>
 								<ul class="dropdown-menu">
-									<li><a href="tutorial/js.html#">Flash (AS3) side</a></li>
+									<li><a href="flash.html">Flash (AS3) side</a></li>
                   <li class="divider"></li>
-									<li><a href="tutorial/js.html#">JavaScript side</a></li>
+									<li><a href="js.html">JavaScript side</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -45,11 +45,18 @@
 		</div><!-- /container -->
 	</div><!-- /navbar wrapper -->
 	
+	<div style="width:100%; height:400px;"></div>
+	
    <div class="container marketing">
     <div class="row">
 			<div class="col-md-4">
-				
+				<h2>How does it work?</h2>
+				<p>The HTML5 Gamepad Shim uses a combination of vendor prefixes, such as <code>webkit</code> and <code>moz</code>, and where the browser doesn't support the native API at all (IE and Safari), utilises a Flash implementation that connects with the browser to provide an equivalent API. Long story short, it makes things <i>too</i> easy to do.
 			</div>
+      <div class="col-md-4">
+        <h2>How did I make it?</h2>
+				<p>Take a look at the <a href="tutorial/
+      </div>
 		</div>
     
 		<!-- FOOTER -->
