--- a/site/download.html
+++ b/site/download.html
@@ -33,9 +33,9 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorial <b class="caret"></b></a>
 								<ul class="dropdown-menu">
-									<li><a href="tutorial/js.html#">Flash (AS3) side</a></li>
+									<li><a href="flash.html">Flash (AS3) side</a></li>
                   <li class="divider"></li>
-									<li><a href="tutorial/js.html#">JavaScript side</a></li>
+									<li><a href="js.html">JavaScript side</a></li>
 								</ul>
 							</li>
 						</ul>
