--- a/site/index.html
+++ b/site/index.html
@@ -57,11 +57,11 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="item active">
-				<img src="http://lorempizza.com/1500/500" class="img-responsive">
+				<img src="img/carousel1.png" class="img-responsive">
 				<div class="container">
 					<div class="carousel-caption">
-						<h1>Bootstrap 3 Carousel Layout</h1>
-						<p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com">Learn More</a></p>
+						<h1>All aboard (even IE)!</h1>
+						<p><a class="btn btn-lg btn-primary" href="download.html">Download</a></p>
           </div>
 				</div>
 			</div>
